Add logging and Image File Record, re-orged classes