@@ -12,11 +12,25 @@
 		<maven-compiler-plugin-release.version>14</maven-compiler-plugin-release.version>
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 		<maven-surefire.version>3.0.0-M4</maven-surefire.version>
+		<log4j2>2.13.3</log4j2>
 		<junit-jupiter.version>5.6.2</junit-jupiter.version>
 	</properties>
   
   <dependencies>
 
+	<!-- Log4j 2, driven by src\main\resources\log4j2.xml -->
+	<dependency>
+		<groupId>org.apache.logging.log4j</groupId>
+		<artifactId>log4j-api</artifactId>
+		<version>${log4j2}</version>
+	</dependency>
+
+	<dependency>
+		<groupId>org.apache.logging.log4j</groupId>
+		<artifactId>log4j-core</artifactId>
+		<version>${log4j2}</version>
+	</dependency>
+	
 	<!-- junit testing -->
 	<dependency>
 		<groupId>org.junit.jupiter</groupId>
@@ -43,11 +57,15 @@
 					<source>${java.jdk}</source>
 					<target>${java.jdk}</target>
 					<release>${maven-compiler-plugin-release.version}</release>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 				<plugin>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>${maven-surefire.version}</version>
+					<configuration>	
+						<compilerArgs>--enable-preview</compilerArgs>
+					</configuration>
 				</plugin>
 		</plugins>
 	</pluginManagement>
